add base structure to user authentication

--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "AuthSettings": {
+    "Issuer": "https://vincereautmori.com",
+    "Audience": "https://vincereautmori.com",
+    "Key": "dc08548d-31ae-463c-ac69-567c86a3b228"
+  },
   "AllowedHosts": "*"
 }
