--- a/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
+++ b/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Entities\Entity.cs" />
+    </ItemGroup>
+
 </Project>
