--- a/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
+++ b/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
@@ -6,4 +6,12 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Gama.Domain\Gama.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
