creates abstraction to repository

--- a/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
+++ b/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Gama.Application\Gama.Application.csproj" />
       <ProjectReference Include="..\Gama.Domain\Gama.Domain.csproj" />
     </ItemGroup>
 
