--- a/src/services/GamaCore/Gama.Api/Gama.Api.csproj
+++ b/src/services/GamaCore/Gama.Api/Gama.Api.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Gama.Application\Gama.Application.csproj" />
+      <ProjectReference Include="..\Gama.Infrastructure\Gama.Infrastructure.csproj" />
       <ProjectReference Include="..\Gama.Shared\Gama.Shared.csproj" />
     </ItemGroup>
 
