--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -10,5 +10,8 @@
     "Audience": "https://vincereautmori.com",
     "Key": "dc08548d-31ae-463c-ac69-567c86a3b228"
   },
+  "ConnectionStrings": {
+    "GamaCoreDbConnectionString": "Host=localhost:5432;Database=GamaCoreDb;Username=admin;Password=admin1234"
+  },
   "AllowedHosts": "*"
 }
