correct some errors and perform some tests

--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -11,7 +11,7 @@
     "Key": "dc08548d-31ae-463c-ac69-567c86a3b228"
   },
   "ConnectionStrings": {
-    "GamaCoreDbConnectionString": "Host=localhost:5432;Database=GamaCoreDb;Username=admin;Password=admin1234"
+      "GamaCoreDbConnectionString": "Host=localhost;Port=5432;Database=GamaCoreDb;Username=admin;Password=admin1234;Pooling=true;"
   },
   "AllowedHosts": "*"
 }
