--- a/src/services/GamaCore/Gama.Application/Gama.Application.csproj
+++ b/src/services/GamaCore/Gama.Application/Gama.Application.csproj
@@ -29,4 +29,8 @@
       </Reference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="DataContracts\Responses\UserManagement\UserUpdatedResponse" />
+    </ItemGroup>
+
 </Project>
