Correct jwt configuration and improve jwt creation

--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -2,13 +2,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.AspNetCore.Components.WebAssembly.Authentication": "Debug"
     }
   },
-  "AuthSettings": {
-    "Issuer": "https://vincereautmori.com",
-    "Audience": "https://vincereautmori.com",
-    "Key": "dc08548d-31ae-463c-ac69-567c86a3b228"
+  "Jwt": {
+    "Issuer": "http://localhost:5007",
+    "Audience": "http://localhost:5007",
+    "SecretKey": "dc08548d31ae463cac69567c86a3b228"
   },
   "ConnectionStrings": {
       "GamaCoreDbConnectionString": "Host=localhost;Port=5432;Database=GamaCoreDb;Username=admin;Password=admin1234;Pooling=true;"
