--- a/src/services/GamaCore/Gama.Application/Gama.Application.csproj
+++ b/src/services/GamaCore/Gama.Application/Gama.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Flunt" Version="2.0.5" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
     </ItemGroup>
 
