--- a/src/services/TheBrain/package.json
+++ b/src/services/TheBrain/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "ts-node -r tsconfig-paths/register src/index.ts"
+    "server": "ts-node -r tsconfig-paths/register src/index.ts server=server",
+    "client": "ts-node -r tsconfig-paths/register src/index.ts server=client"
   },
   "keywords": [],
   "author": "",
