--- a/src/services/GamaCore/Gama.Application/Gama.Application.csproj
+++ b/src/services/GamaCore/Gama.Application/Gama.Application.csproj
@@ -13,6 +13,7 @@
     <ItemGroup>
       <PackageReference Include="Flunt" Version="2.0.5" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.28.1" />
     </ItemGroup>
 
     <ItemGroup>
