adds trafficfine controller

--- a/src/services/GamaCore/Gama.Api/Gama.Api.csproj
+++ b/src/services/GamaCore/Gama.Api/Gama.Api.csproj
@@ -26,4 +26,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Compile Remove="Controllers\TrafficFine.cs" />
+    </ItemGroup>
+
 </Project>
