--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -12,7 +12,8 @@
     "SecretKey": "dc08548d31ae463cac69567c86a3b228"
   },
   "ConnectionStrings": {
-      "GamaCoreDbConnectionString": "Host=localhost;Port=5432;Database=GamaCoreDb;Username=admin;Password=admin1234;Pooling=true;"
+    "GamaCoreDbConnectionString": "Host=localhost;Port=5432;Database=GamaCoreDb;Username=admin;Password=admin1234;Pooling=true;",
+    "EventBusConnectionString": "amqp://guest:guest@localhost:5672"
   },
   "AllowedHosts": "*"
 }
