--- a/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
+++ b/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
@@ -23,4 +23,8 @@
       <None Remove="Enums\**" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Events\" />
+    </ItemGroup>
+
 </Project>
