--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -38,7 +38,7 @@ services:
     ports:
       - "5433:5432"
     volumes:
-      - postgis-data:/var/lib/postgresql/data/ 
+      - postgis_data:/var/lib/postgresql/data/ 
   
   rabbitmq:
     container_name: 'rabbitmq'
