--- a/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
+++ b/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
@@ -8,9 +8,9 @@
 
     <ItemGroup>
       <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
-      <PackageReference Include="MassTransit.RabbitMQ" Version="8.0.16" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.1" />
+      <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     </ItemGroup>
 
     <ItemGroup>
