--- a/src/services/TheBrain/package.json
+++ b/src/services/TheBrain/package.json
@@ -12,11 +12,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
+    "geojson": "^0.5.0",
     "net": "^1.0.2",
     "pg": "^8.10.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
+    "@types/amqplib": "^0.10.1",
+    "@types/geojson": "^7946.0.10",
+    "@types/node": "^18.16.16",
     "@types/pg": "^8.6.6",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
