--- a/src/services/TheBrain/package.json
+++ b/src/services/TheBrain/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "geojson": "^0.5.0",
+    "geolib": "^3.3.4",
     "net": "^1.0.2",
     "pg": "^8.10.0"
   },
