--- a/src/services/NationalGeographicMessager/appsettings.json
+++ b/src/services/NationalGeographicMessager/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NationalGeographicDbConnectionString": "Host=localhost;Port=5433;Database=NationalGeographicDb;Username=admin;Password=admin1234;Pooling=true;",
+    "EventBusConnectionString": "amqp://guest:guest@localhost:5672"
+  }
 }
