--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -12,7 +12,7 @@
     "SecretKey": "dc08548d31ae463cac69567c86a3b228"
   },
   "ConnectionStrings": {
-    "GamaCoreDbConnectionString": "Host=localhost;Port=5432;Database=GamaCoreDb;Username=admin;Password=admin1234;Pooling=true;",
+    "GamaCoreDbConnectionString": "Host=gama-core-db.cg9zarcfzjcp.us-east-2.rds.amazonaws.com;Port=5432;Database=gama;Username=gama;Password=changeme;Pooling=true;",
     "EventBusConnectionString": "amqp://guest:guest@localhost:5672"
   },
   "AllowedHosts": "*"
