--- a/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
+++ b/src/services/GamaCore/Gama.Domain/Gama.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
     </ItemGroup>
 
     <ItemGroup>
