--- a/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
+++ b/src/services/GamaCore/Gama.Infrastructure/Gama.Infrastructure.csproj
@@ -7,7 +7,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.7" />
+      <PackageReference Include="AWSSDK.S3" Version="3.7.203.7" />
+      <PackageReference Include="AWSSDK.SQS" Version="3.7.200.27" />
       <PackageReference Include="EFCore.NamingConventions" Version="7.0.2" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.4" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-preview.2.23128.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.1" />
       <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
