--- a/src/services/GamaCore/Gama.Api/appsettings.json
+++ b/src/services/GamaCore/Gama.Api/appsettings.json
@@ -9,11 +9,22 @@
   "Jwt": {
     "Issuer": "http://localhost:5007",
     "Audience": "http://localhost:5007",
-    "SecretKey": "dc08548d31ae463cac69567c86a3b228"
+    "SecretKey": ""
   },
   "ConnectionStrings": {
-    "GamaCoreDbConnectionString": "Host=gama-core-db.cg9zarcfzjcp.us-east-2.rds.amazonaws.com;Port=5432;Database=gama;Username=gama;Password=changeme;Pooling=true;",
-    "EventBusConnectionString": "amqp://guest:guest@localhost:5672"
+    "GamaCoreDbConnectionString": "",
+    "EventBusConnectionString": ""
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AWS": {
+    "Profile": "default",
+    "Region": "us-east-2",
+    "Credentials": {
+      "AccessKey": "",
+      "SecretKey": ""
+    }
+  },
+  "S3Configuration": {
+    "BucketName": "gama.bucket.com.br"
+  }
 }
