--- a/src/services/NationalGeographicWorker/appsettings.json
+++ b/src/services/NationalGeographicWorker/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "NationalGeographicDbConnectionString": "Host=localhost;Port=5433;Database=NationalGeographicDb;Username=admin;Password=admin1234;Pooling=true;",
+    "NationalGeographicDbConnectionString": "",
     "EventBusConnectionString": "amqp://guest:guest@localhost:5672"
   }
 }
