adjust date format

--- a/src/services/GamaCore/Gama.Application/Gama.Application.csproj
+++ b/src/services/GamaCore/Gama.Application/Gama.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Gama.Domain\Gama.Domain.csproj" />
+      <ProjectReference Include="..\Gama.Shared\Gama.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
